--- a/src/_posts/databases/postgresql/2000-01-01-overview.md
+++ b/src/_posts/databases/postgresql/2000-01-01-overview.md
@@ -42,7 +42,7 @@ encryption at rest.
 {% note %}
   Starting December 20th 2023, every new PostgreSQL database defaults with the 
   `SCRAM-SHA-256` hash algorithm for users' passwords. You can learn more in 
-  the [dedicated security bulletin]({% post_url security/bulletins/2024-03-13-SSB-2024-002 %}).
+  the [linked security bulletin]({% post_url security/bulletins/2024-03-27-SSB-2024-002 %}).
 {% endnote %}
 
 {% note %}
