--- a/src/_posts/security/bulletins/2024-03-27-SSB-2024-002.md
+++ b/src/_posts/security/bulletins/2024-03-27-SSB-2024-002.md
@@ -80,7 +80,7 @@ For each **manually created user** using MD5 authentication method, run the foll
 $ scalingo --app my-app --addon <addon uuid> database-user-update-password <username>
 ```
 
-By listing the users in your database again, you will confirm the change of algorithm.
+By listing the users in your database again, you will be able to confirm the change of algorithm.
 
 ## How can I be sure that my application is compatible with SCRAM-SHA-256?
 
