--- a/src/_posts/security/bulletins/2024-03-27-SSB-2024-002.md
+++ b/src/_posts/security/bulletins/2024-03-27-SSB-2024-002.md
@@ -84,7 +84,7 @@ By listing the users in your database again, you will be able to confirm the cha
 
 ## How can I be sure that my application is compatible with SCRAM-SHA-256?
 
-The best way to check this change, without affecting your application, is to create a new app with the same source code and add a new PostgreSQL add-on. You can then import some sample data and confirm the compatibility with your client library.
+The best way to check this change, without affecting your application, is to create a new app with the same source code and add a new PostgreSQL add-on. You can then import some sample data and assess the compatibility with your client library.
 
 To help you identify the connection method used when establishing a connection to your database, we have made this information visible in our API and CLI (version 1.31.0 and later). For more information, [please consult our documentation](/databases/postgresql/managing#listing-users).
 
