Delete a duplicate and fix a typo.

--- a/src/_posts/databases/postgresql/2000-01-01-overview.md
+++ b/src/_posts/databases/postgresql/2000-01-01-overview.md
@@ -24,7 +24,7 @@ datasets with TimescaleDB.
 
 Scalingo for PostgreSQL® is our official PostgreSQL® addon. [We have several
 plans available](https://scalingo.com/databases/postgresql#database-compare),
-which you can chose of depending on your needs and budget. As always, a free
+which you can choose of depending on your needs and budget. As always, a free
 plan is available for you to test our offer.
 
 ### Features
@@ -36,19 +36,13 @@ They also include access to metrics and logs, allowing for quick and easy
 monitoring and auditing. For more information regarding this topic, please [see
 our dedicated page]({% post_url databases/postgresql/2000-01-01-monitoring %}).
 
-From the security point of view, they all come with a TLS connection and
+From a security point of view, they all come with a TLS connection and
 encryption at rest.
 
 {% note %}
   Starting December 20th 2023, every new PostgreSQL database defaults with the
   `SCRAM-SHA-256` hash algorithm for users' passwords. You can learn more in
   the [linked security bulletin]({% post_url security/bulletins/2024-03-27-SSB-2024-002 %}).
-{% endnote %}
-
-{% note %}
-  Starting December 20th 2024, every new PostgreSQL database defaults with the
-  `SCRAM-SHA-256` hash algorithm for users' passwords. You can learn more in
-  the [dedicated security bulletin]({% post_url security/bulletins/2024-03-27-SSB-2024-002 %}).
 {% endnote %}
 
 In addition to the above, Starter plans include daily Periodic backups, as
