Better wording by Jennifer.

--- a/src/_posts/security/bulletins/2024-03-27-SSB-2024-002.md
+++ b/src/_posts/security/bulletins/2024-03-27-SSB-2024-002.md
@@ -16,8 +16,6 @@ As part of our ongoing efforts to enhance security and provide the best possible
 Quote from the PostgreSQL documentation:
 
 > The method scram-sha-256 performs SCRAM-SHA-256 authentication, as described in RFC 7677. It is a challenge-response scheme that prevents password sniffing on untrusted connections and supports storing passwords on the server in a cryptographically hashed form that is thought to be secure.
-> 
-> 
 > This is the most secure of the currently provided methods, but it is not supported by older client libraries.
 
 This is a per-database-user change. It implies resetting the users' passwords (since PostgreSQL doesn't know them).
@@ -35,7 +33,7 @@ You will be notified by e-mail 24 hours before the start of the maintenance peri
 
 Rest assured, this transition is designed to have minimal impact on your applications (less than a second). The connections to the database will remain active and there is no need to restart your application. Furthermore, the SCRAM-SHA-256 algorithm is widely supported by PostgreSQL clients library and has been in use for several years.
 
-To ensure a smooth transition, we kindly request you to verify that your PostgreSQL client version supports the SCRAM-SHA-256 algorithm. You can refer to the [PostgreSQL Wiki](https://wiki.postgresql.org/wiki/List_of_drivers) for the list of compatible client library versions.
+To ensure a smooth transition, we kindly request that you verify that your PostgreSQL client version supports the SCRAM-SHA-256 algorithm. You can refer to the [PostgreSQL Wiki](https://wiki.postgresql.org/wiki/List_of_drivers) for the list of compatible client library versions.
 
 ## Application of this change
 
@@ -90,11 +88,11 @@ To help you identify the connection method used when establishing a connection t
 
 ## I would like to apply this change faster (HDH add-ons only)
 
-If your HDH application is already fully compatible with SCRAM-SHA-256 and you wish to apply this security enhancement without waiting for 2 months, please contact our support team by chat or e-mail. Provide us the names of the databases you wish to update and we will do the rest!
+If your HDH application is already fully compatible with SCRAM-SHA-256 and you wish to apply this security enhancement without waiting for 2 months, please contact our support team by chat or e-mail. Provide us with the names of the databases you wish to update and we will do the rest!
 
 ## I would like to postpone this maintenance for more than 2 months (HDH add-ons only)
 
-Although it is not recommended, if you would like to defer this maintenance for more than 2 months for your HDH applications, please contact our support team.
+While not recommended, if you would like to defer this maintenance for more than 2 months for your HDH applications, please contact our support team.
 
 ## Final words
 
