Fix typo by Jennifer.

--- a/src/_posts/security/bulletins/2024-03-27-SSB-2024-002.md
+++ b/src/_posts/security/bulletins/2024-03-27-SSB-2024-002.md
@@ -37,7 +37,7 @@ To ensure a smooth transition, we kindly request that you verify that your Postg
 
 ## Application of this change
 
-As PostgreSQL stores only a *hash* of the password, changing the hashing algorithm implies that we provide the original password again to the database. This is only possible for users that are managed by Scalingo (the *protected* users in your database dashboard).
+As PostgreSQL only stores a *hash* of the password, changing the hashing algorithm implies that we provide the original password again to the database. This is only possible for users that are managed by Scalingo (the *protected* users in your database dashboard).
 
 ### Protected users
 
